tests/good/test++_is_expr.mil
function main () {
	a = 4;
	y = a++ + 1;
	print(a);
	print(y);
	y = a-- - 1;
	print(a);
	print(y);

	a = 10;
	y = --a - 1;
	print(a);
	print(y);

	a = 10;
	y = ++a + 1;
	print(a);
	print(y);
}
