tests/bad/aritmetic_operator_with_non_int_type.mil
function main () {
	a = 4/ true;
}